Bug fixes and various improvements.
- Fix and issue for window controls with 'tree-tabs' config
- Added some smooth transitions in various elements.

--- a/chrome/components/one_UC-newtabpage.css
+++ b/chrome/components/one_UC-newtabpage.css
@@ -603,7 +603,7 @@ body{
 /*..........................................Firefox--------------------------------------------
 ---------------------------------------------view-----------------------------------------------*/
 
-@-moz-document url(about:firefoxview), url(about:firefoxview-next) /*, regexp("^about:.*") */ {
+@-moz-document url(about:firefoxview), url(about:firefoxview) /*, regexp("^about:.*") */ {
     
     @media (prefers-color-scheme: dark) {
   :host, :root {
