Bug fixes for linux system
- Display correctly the window controls on linux.
- fix for window controls position in 'tree-style' config in linux.

--- a/chrome/components/one_tree-tabs.css
+++ b/chrome/components/one_tree-tabs.css
@@ -51,6 +51,10 @@
         padding-inline: 9px !important;
     }
   }
+    
+@media (-moz-platform: linux) {
+    .titlebar-buttonbox { margin-inline-end: 10px !important; }
+    }
 
 /*###################################### Mantener Window Controls quitando las pestañas ###########################
 ############################################## Codigo sin editar de MrOtherGuy ####################################*/
