bug fixes for beta/nightly Firefox version

--- a/chrome/components/one_optional-features.css
+++ b/chrome/components/one_optional-features.css
@@ -178,10 +178,10 @@
     }}
 
 @media (prefers-color-scheme: dark){ 
-    :root,
-    :root:is([brighttext]):-moz-lwtheme,
+    :root[brighttext],
     :root[lwt-toolbar-field-focus-brighttext],
-    :root:-moz-lwtheme{
+    :root[lwtheme],
+    :root:not([lwtheme]){
     
   --toolbar-field-background-color: transparent !important;                                                      /* toolbar_field */
   --toolbar-field-border-color: transparent !important;                                                          /* toolbar_field_border */
@@ -202,9 +202,10 @@
     }}
   
 @media (prefers-color-scheme: light){
-    :root,
     :root:not([lwtheme-brighttext="true"]),
-    :root:-moz-lwtheme{
+    :root:not([lwt-toolbar-field-focus-brighttext]),
+    :root[lwtheme],
+    :root:not([lwtheme]){
 
   --toolbar-field-background-color: transparent !important;                                                      /* toolbar_field */
   --toolbar-field-border-color: transparent !important;                                                          /* toolbar_field_border */
